# ml-workflow

./: README.md
src/data-collector/: Dockerfile  cli.py  docker-entrypoint.sh  docker-shell-push.sh  docker-shell.sh
src/data-processor/: Dockerfile  cleanser.py  cli.py  docker-entrypoint.sh  docker-shell-push.sh  docker-shell.sh  pyproject.toml
src/model-training/: Dockerfile  Pipfile  cli.py  docker-entrypoint.sh  docker-shell.sh  package-trainer.sh
src/model-training/package/: setup.py
src/model-training/package/trainer/: task.py
src/workflow/: cli.py  data_collector.yaml  data_processor.yaml  docker-entrypoint.sh  docker-shell.sh  model.py  model_training.yaml  pipeline.yaml  pyproject.toml
