[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dask>=2024.8.0",
    "difpy>=4.2.1",
    "google-cloud-storage>=3.4.1",
    "pandas>=2.1.0",
    "scikit-learn>=1.6.1",
    "tensorflow==2.13.1",
]
